kubernetes/mongodb-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2025-04-19T15:27:10Z"
  generation: 1
  labels:
    app: mongo-depl
  name: mongo-depl
  namespace: default
  resourceVersion: "348207"
  uid: 8b0bb9c1-47bd-4eda-bf65-247ef646e213
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mongo-depl
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongo-depl
    spec:
      containers:
      - image: mongo
        imagePullPolicy: Always
        name: mongo
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - mountPath: "/data/db"
            name: mymongoroot
      volumes:
        - name: mymongoroot
          hostPath:
            path: /data/mongodb
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
