kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fileinfo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: fileinfo.vrlaptop.me.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fileinfo-depl
            port:
              number: 8080
